// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableWithFilter should render loading and pagination 1`] = `
<Fragment>
  <PrimaryToolbar
    pagination={
      <Skeleton
        size="lg"
      />
    }
  />
  <SkeletonTable
    columns={
      Array [
        Object {
          "title": "something",
        },
      ]
    }
    rowSize={10}
  />
</Fragment>
`;

exports[`TableWithFilter should render with data 1`] = `
<Fragment>
  <Table
    aria-label="undefined tags"
    borders={true}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      Array [
        Object {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <Component />
  </Table>
</Fragment>
`;

exports[`TableWithFilter should render with data and bulk select with calculate checked 1`] = `
<Fragment>
  <PrimaryToolbar
    bulkSelect={
      Object {
        "checked": undefined,
        "count": 0,
        "items": Array [
          Object {
            "onClick": [Function],
            "title": "Select none (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select page (1)",
          },
        ],
        "onSelect": [Function],
      }
    }
    pagination={
      Object {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
      }
    }
  />
  <Table
    aria-label="undefined tags"
    borders={true}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      Array [
        Object {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    isTreeTable={false}
    onSelect={[Function]}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      isSticky={false}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "ofWord": "of",
          "optionsToggle": "Items per page",
          "page": "",
          "pages": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;

exports[`TableWithFilter should render with data and bulk select without calculate checked 1`] = `
<Fragment>
  <PrimaryToolbar
    bulkSelect={
      Object {
        "checked": undefined,
        "count": 0,
        "items": Array [
          Object {
            "onClick": [Function],
            "title": "Select none (0)",
          },
          Object {
            "onClick": [Function],
            "title": "Select page (1)",
          },
        ],
        "onSelect": [Function],
      }
    }
    pagination={
      Object {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
      }
    }
  />
  <Table
    aria-label="undefined tags"
    borders={true}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      Array [
        Object {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    isTreeTable={false}
    onSelect={[Function]}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      isSticky={false}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "ofWord": "of",
          "optionsToggle": "Items per page",
          "page": "",
          "pages": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;

exports[`TableWithFilter should render with data and filters 1`] = `
<Fragment>
  <PrimaryToolbar
    filterConfig={
      Object {
        "items": Array [
          Object {
            "something": "1",
          },
        ],
      }
    }
    pagination={
      Object {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
      }
    }
  />
  <Table
    aria-label="undefined tags"
    borders={true}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      Array [
        Object {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <Component />
  </Table>
</Fragment>
`;

exports[`TableWithFilter should render with data and pagination 1`] = `
<Fragment>
  <PrimaryToolbar
    pagination={
      Object {
        "itemCount": undefined,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
        "page": 1,
      }
    }
  />
  <Table
    aria-label="undefined tags"
    borders={true}
    canSelectAll={true}
    canSortFavorites={true}
    cells={
      Array [
        Object {
          "title": "something",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    isStickyHeader={false}
    isTreeTable={false}
    ouiaSafe={true}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "one",
        ],
      ]
    }
    selectVariant="checkbox"
    variant="compact"
  >
    <TableHeader />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      isSticky={false}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "ofWord": "of",
          "optionsToggle": "Items per page",
          "page": "",
          "pages": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Fragment>
`;

exports[`TableWithFilter should render without data 1`] = `
<Fragment>
  <SkeletonTable
    rowSize={10}
  />
</Fragment>
`;
